PMDLL/PMDLL/com.hpp

bool gblog = true;
struct plane
{
	vector3 o;
	vector3 n;
	plane(const vector3& _o, const vector3& _n)
	{
		o = _o;
		n = _n;
		n.norm();
	}
	plane(const vector3& p1, const vector3& p2, const vector3& p3)
	{
		n = (p2 - p1).cross(p3 - p1);
		n.norm();
		o = p1;
	}
};
int					(*drawmap)[IMAGESCALE]				= drawmap0;
bool gcommonvertex = false;
extern int editface(int type, VECLIST& e, const vec& startpos, const vec& updir, real hitdis);
	int EXPORT_API getnexttri(vec* v, int vcnt, int* t, int tcnt, int tri1)
	{
		int tri2 = tri1 - 3;
		if(tri2 >= 0)
		{
			vec& p1 = v[tri1];
			vec& p3 = v[tri1 + 1];
			vec& p2 = v[tri1 + 2];
			vec& pp1 = v[tri2];
			vec& pp3 = v[tri2 + 1];
			vec& pp2 = v[tri2 + 2];
			if (!iserrtriangle(p1, p2, p3)
				&& (p2 == pp3 && p3 == pp2) 
				&& (abs(gettrinormval(p1, p2, p3) - gettrinormval(pp1, pp2, pp3)) < 0.0005) 
				)
				return tri2;
		}
		tri2 = tri1 + 3;
		if (tri2 < tcnt)
		{
			vec& p1 = v[tri1];
			vec& p3 = v[tri1 + 1];
			vec& p2 = v[tri1 + 2];
			vec& pp1 = v[tri2];
			vec& pp3 = v[tri2 + 1];
			vec& pp2 = v[tri2 + 2];
			if (!iserrtriangle(p1, p2, p3)
				&& (p2 == pp3 && p3 == pp2) 
				&& (abs(gettrinormval(p1, p2, p3) - gettrinormval(pp1, pp2, pp3)) < 0.0005) 
				)
				return tri2;
		}	
		return -1;		
	}
	bool EXPORT_API colorface(unsigned int* vcor, int vcnt, int* t, int tcnt, int tri1, int tri2, unsigned int cor)
	{
		if (tri1 >= 0 && tri1 < tcnt)
		{
			vcor[t[tri1]] = blendcor(vcor[t[tri1]], cor, 0.1);
			vcor[t[tri1] + 1] = blendcor(vcor[t[tri1] + 1], cor, 0.1);
			vcor[t[tri1] + 2] = blendcor(vcor[t[tri1] + 2], cor, 0.1);
		}
		if (tri2 >= 0 && tri2 < tcnt)
		{
			vcor[t[tri2]] = blendcor(vcor[t[tri2]], cor, 0.1);
			vcor[t[tri2] + 1] = blendcor(vcor[t[tri2] + 1], cor, 0.1);
			vcor[t[tri2] + 2] = blendcor(vcor[t[tri2] + 2], cor, 0.1);
		}
		return true;
	}
	bool EXPORT_API setface(vec* v, int* t, int tcnt, int tri1, int tri2, vec* pt)
	{
		VECLIST e;
		{
			v[t[tri1]] = pt[0];
			v[t[tri1] + 1] = pt[3];
			v[t[tri1] + 2] = pt[1];
		}
		{
			v[t[tri2]] = pt[2];
			v[t[tri2] + 1] = pt[1];
			v[t[tri2] + 2] = pt[3];
		}
		return true;
	}
	int EXPORT_API editface(int type, vec* v, int vcnt, int* t, int tcnt, unsigned int* vcor, int tri1, int tri2, vec campos, vec startpos, vec updir, real hitdis)
	{
		gcamdis = (startpos - campos).len() / EXPORT_SCALE;
		bool bpriview = false;
		if (type >= 1000)
		{
			bpriview = true;
			gblog = false; 			
			type -= 1000;
		}
		else
			gblog = true;
		if (v[t[tri1] + 1] != v[t[tri2] + 2])
		{
			LOGMSG("三角形索引非法!")
				savelog(logmessage.str());
			return false;
		}
		int ret = false;
		if (type == 0 || type == 12)
		{
			START_MESH
			unsigned int vcors[4];			
			LOGMSG("--------------延伸edge: --------------------")
			VECLIST e;
			{
				vec p1 = v[t[tri1]];
				vec p2 = v[t[tri1] + 1];
				vec p3 = v[t[tri1] + 2];
				e.push_back(p1); e.push_back(p3);
				LOGMSG("triangle1 " << tri1)
			}
			{
				vec p1 = v[t[tri2]];
				vec p2 = v[t[tri2] + 1];
				vec p3 = v[t[tri2] + 2];
				e.push_back(p1); e.push_back(p3);
				LOGMSG("triangle2 " << tri2)
			}			
			LOGMSG(VEC2STR(e[0].p) << " " << VEC2STR(e[1].p) << " " << VEC2STR(e[2].p) << " " << VEC2STR(e[3].p))
			vec edgenorm = getedgenorm(e);
			real ustep = USIZE * EXPORT_SCALE;
			real dis = ustep;
			real camdis = (startpos - campos).len();
			real dis0 = MAX((e[0] - e[1]).len(), (e[2] - e[1]).len());
				draglen = int(hitdis / ustep + 0.5);
				dis = hitdis;
			dragwid = (e[0] - e[1]).len() / ustep + 0.5;
			draghgt = (e[2] - e[1]).len() / ustep + 0.5;			
			g_vec = getedgecenter(e) + edgenorm * dis;
			if (dis == 0)
				return false;
			if (type == 12)
			{
				hitdis = dis;
				goto EDITFACE;
			}			
			vec deta = edgenorm * dis;
			ret = 3;
			{
				v[t[tri1]]+= deta;
				v[t[tri1] + 1] += deta;
				v[t[tri1] + 2] += deta;
				v[t[tri2]] += deta;
				v[t[tri2] + 1] += deta;
				v[t[tri2] + 2] += deta;
			}
			{
				for (int j = 0; j < 4; j++)
				{	
					bool bsuccess = 0;
					for (int i = 0; i < tcnt; i += 3)
					{
						vec& p1 = v[t[i]];
						vec& p3 = v[t[i] + 1];
						vec& p2 = v[t[i] + 2];
						if (t[i] == tri1 || t[i] == tri2
							|| iserrtriangle(p1, p2, p3) 
							|| getsin(p1, p2, p3) < 0.9 
							)
							continue;
						if ((p1 == e[j].p) || p1 == e[(j + 1) % 4].p) 
						{	
							if (((p2 == e[j].p) || p2 == e[(j + 1) % 4].p || (p3 == e[j].p) || p3 == e[(j + 1) % 4].p) 
								&& isnormVex(edgenorm, p1, p2, p3, e[(j + 1) % 4].p - e[j].p)) 
							{
								LOGMSG("本三角形 " << t[i])
								if ((p2 == e[j].p) || p2 == e[(j + 1) % 4].p)
								{
									if (i - 3 >= 0 && v[t[i - 3] + 1] == p2 && v[t[i - 3] + 2] == p3)
									{
										if (!iserrtriangle(p1 + deta, p2 + deta, p3))
										{
											p1 += deta;
											p2 += deta;
											v[t[i - 3] + 1] += deta;
											bsuccess = 1;
											LOGMSG("1判断临近的三角形P3跟本三角形P2匹配A " << t[i - 3])
										}
										else
										{
											deleteTriangle(p1, p2, p3);
											deleteTriangle(v[t[i - 3]], v[t[i - 3] + 1], v[t[i - 3] + 2]);
											LOGMSG("1判断临近的三角形P3跟本三角形P2匹配A 三角形重合!" << t[i - 3])
										}
										break;
									}
									else if (i + 3 < tcnt && v[t[i + 3] + 1] == p2 && v[t[i + 3] + 2] == p3)
									{
										if (!iserrtriangle(p1 + deta, p2 + deta, p3))
										{
											p1 += deta;
											p2 += deta;
											v[t[i + 3] + 1] += deta;
											bsuccess = 1;
											LOGMSG("1判断临近的三角形P3跟本三角形P2匹配B" << t[i + 3])
										}
										else
										{
											deleteTriangle(p1, p2, p3);
											deleteTriangle(v[t[i + 3]], v[t[i + 3] + 1], v[t[i + 3] + 2]);
											LOGMSG("1判断临近的三角形P3跟本三角形P2匹配B 三角形重合!" << t[i + 3])
										}
										break;
									}
								}
								else if ((p3 == e[j].p) || p3 == e[(j + 1) % 4].p)
								{
									if (i - 3 >= 0 && v[t[i - 3] + 2] == p3 && v[t[i - 3] + 1] == p2)
									{		
										if (!iserrtriangle(p1 + deta, p2, p3 + deta))
										{
											p1 += deta;
											p3 += deta;
											v[t[i - 3] + 2] += deta;
											bsuccess = 1;
											LOGMSG("2判断临近的三角形P2跟本三角形P3匹配A" << t[i - 3])
										}
										else
										{
											deleteTriangle(p1, p2, p3);
											deleteTriangle(v[t[i - 3]], v[t[i - 3] + 1], v[t[i - 3] + 2]);
											LOGMSG("2判断临近的三角形P2跟本三角形P3匹配A 三角形重合!" << t[i - 3])
										}
										break;
									}
									else if (i + 3 < tcnt && v[t[i + 3] + 2] == p3 && v[t[i + 3] + 1] == p2)
									{
										if (!iserrtriangle(p1 + deta, p2, p3 + deta))
										{
											p1 += deta;
											p3 += deta;
											v[t[i + 3] + 2] += deta;
											bsuccess = 1;
											LOGMSG("2判断临近的三角形P2跟本三角形P3匹配B" << t[i + 3])
										}
										else
										{
											deleteTriangle(p1, p2, p3);
											deleteTriangle(v[t[i + 3]], v[t[i + 3] + 1], v[t[i + 3] + 2]);
											LOGMSG("2判断临近的三角形P2跟本三角形P3匹配B 三角形重合!" << t[i + 3])
										}										
										break;
									}
								}
							}
						}
					}
					if(!bsuccess)
					{
						plane(e[j].p / EXPORT_SCALE, e[(j + 1) % 4].p / EXPORT_SCALE, e[(j + 1) % 4].p / EXPORT_SCALE + deta / EXPORT_SCALE, e[j].p / EXPORT_SCALE + deta / EXPORT_SCALE, 0xFFFF00FF);
						LOGMSG("加面")
						ret = 1;
					}
				}
			}
			savelog(logmessage.str());
			END_MESH
			return ret;		
		}
	EDITFACE:
		START_MESH
		{
			LOGMSG("--------------编辑面edge: "<< type << "--------------------")
			VECLIST e;
			{
				vec p1 = v[t[tri1]];
				vec p2 = v[t[tri1] + 1];
				vec p3 = v[t[tri1] + 2];
				e.push_back(p1 / EXPORT_SCALE); e.push_back(p3 / EXPORT_SCALE);
				LOGMSG("triangle1 " << tri1 << " p1 = " << VEC2STR(p1) << " p2 = " << VEC2STR(p2) << " p3 = " << VEC2STR(p3))
			}
			{
				vec p1 = v[t[tri2]];
				vec p2 = v[t[tri2] + 1];
				vec p3 = v[t[tri2] + 2];
				e.push_back(p1 / EXPORT_SCALE); e.push_back(p3 / EXPORT_SCALE);
				LOGMSG("triangle2 " << tri2 << " p1 = " << VEC2STR(p1) << " p2 = " << VEC2STR(p2) << " p3 = " << VEC2STR(p3))
			}			
			LOGMSG(VEC2STR(e[0].p) << " " << VEC2STR(e[1].p) << " " << VEC2STR(e[2].p) << " " << VEC2STR(e[3].p))
			ret = editface(type, e, startpos / EXPORT_SCALE, updir.normcopy(), hitdis / EXPORT_SCALE);
		}
		END_MESH
		savelog(logmessage.str());
		return ret;
	}
	int EXPORT_API editfacetri(int type, vec* v, int vcnt, int* t, int tcnt, unsigned int* vcor, int tri1, vec campos, vec startpos, vec updir, real hitdis)
	{
		bool bpriview = false;
		if (type >= 1000)
		{
			bpriview = true;
			gblog = false;
			type -= 1000;
		}
		else
			gblog = true;
		int ret = 0;
		START_MESH
		{
			LOGMSG("--------------editfacetri edge: " << type << "--------------------")
			vec p1 = v[t[tri1]] / EXPORT_SCALE;
			vec p2 = v[t[tri1] + 1] / EXPORT_SCALE;
			vec p3 = v[t[tri1] + 2] / EXPORT_SCALE;
			LOGMSG("triangle1 " << tri1 << " p1 = " << VEC2STR(p1) << " p2 = " << VEC2STR(p2) << " p3 = " << VEC2STR(p3))
			if (type == 35)
			{
				color = 0xFF006080;
				vec deta = gettrinorm(p1, p3, p2) * (USIZE * 0.1);
				triang(p1 + deta, p3 + deta, p2 + deta, color);
				color = 0xFFFFFFFF;
				flowertriangle(p1, p2, p3);
				ret = 6;
			}
		}
		END_MESH
		savelog(logmessage.str());
		return ret;
	}
	int EXPORT_API triangleArt(int type, vec* v, int vcnt, int* t, int tcnt, unsigned int* vcor, int tri1, vec pos)
	{
		LOGMSG("--------------triangleArt--------------------")
		if (tri1 >= vcnt)
			return false;
		int ret = false;
		vec p1 = v[t[tri1]] / EXPORT_SCALE;
		vec p3 = v[t[tri1] + 1] / EXPORT_SCALE;
		vec p2 = v[t[tri1] + 2] / EXPORT_SCALE;
		vec norm = gettrinorm(p1, p2, p3);		
		pos /= EXPORT_SCALE;
		pos += norm * (rrnd(0, 0.01) * USIZE);
		g_vec /= EXPORT_SCALE;
		real dis1 = (g_vec - p1).len();
		real dis2 = (g_vec - p2).len();
		real dis3 = (g_vec - p3).len();
		const real cmindis = 0.25 * USIZE;
		if(dis1 < cmindis || dis2 < cmindis || dis3 < cmindis)
		{
			ret = 2;
			if(dis1 < cmindis)
				v[t[tri1]] = pos * EXPORT_SCALE;
			else if (dis2 < cmindis)
				v[t[tri1] + 2] = pos * EXPORT_SCALE;
			else if (dis3 < cmindis)
				v[t[tri1] + 1] = pos * EXPORT_SCALE;
		}
		else
		{
			START_MESH
			vec nn = (p3 - p1).cross(norm).normcopy();
			real dot1 = (g_vec - p1).dot(nn);
			nn = (p1 - p2).cross(norm).normcopy();
			real dot2 = (g_vec - p2).dot(nn);
			nn = (p2 - p3).cross(norm).normcopy();
			real dot3 = (g_vec - p3).dot(nn);
			{
				ret = 1;
				if (dot3 < dot2 && dot3 < dot1)
				{
					logmessage << "\ntriangleArt 1";
					triangex(norm, p2, pos, p3, 0xFFFFFFFF);
				}
				else if (dot2 < dot3 && dot2 < dot1)
				{
					logmessage << "\ntriangleArt 2";
					triangex(norm, p1, pos, p2, 0xFFFFFFFF);
				}
				else
				{
					logmessage << "\ntriangleArt 3";
					triangex(norm, p1, p3, pos, 0xFFFFFFFF);
				}
			}
			END_MESH
		}		
		return ret;
	}
	int EXPORT_API triangleArt3D(int type, vec* v, int vcnt, int* t, int tcnt, unsigned int* vcor, int tri1, vec pos)
	{
		LOGMSG("--------------triangleArt3d--------------------")
			if (tri1 >= vcnt)
				return false;
		int ret = false;
		vec p1 = v[t[tri1]] / EXPORT_SCALE;
		vec p3 = v[t[tri1] + 1] / EXPORT_SCALE;
		vec p2 = v[t[tri1] + 2] / EXPORT_SCALE;
		vec norm = gettrinorm(p1, p2, p3);
		pos /= EXPORT_SCALE;
		pos += norm * (rrnd(0, 0.01) * USIZE);
		g_vec /= EXPORT_SCALE;
		real dis1 = (g_vec - p1).len();
		real dis2 = (g_vec - p2).len();
		real dis3 = (g_vec - p3).len();
		const real cmindis = 0.25 * USIZE;
		if (dis1 < cmindis || dis2 < cmindis || dis3 < cmindis)
		{
			ret = 2;
			if (dis1 < cmindis)
				v[t[tri1]] = pos * EXPORT_SCALE;
			else if (dis2 < cmindis)
				v[t[tri1] + 2] = pos * EXPORT_SCALE;
			else if (dis3 < cmindis)
				v[t[tri1] + 1] = pos * EXPORT_SCALE;
		}
		else
		{
			START_MESH				
			ret = 1;
			logmessage << "\ntriangleArt3d 3";
			VECLIST ee;
			ee.push_back(p1); ee.push_back(p2); ee.push_back(p3); ee.push_back(p1);
			face(ee, pos);
			END_MESH
		}
		return ret;
	}
	void EXPORT_API invnorm(int* t, int tcnt)
	{
		for (int i = 0; i < tcnt; i+=3)
		{
			int& p1 = t[i];
			int& p2 = t[i + 1];
			int& p3 = t[i + 2];
			int t = p2;
			p2 = p3;
			p3 = t;
		}
	}
	int EXPORT_API getVcnt()
	{
		return gsubmesh.vertices.size();
	}
	bool EXPORT_API getVdata(vec* v)
	{
		for (int i = 0; i < gsubmesh.vertices.size(); i++)
		{
			v[i] = gsubmesh.vertices[i];
		}
		return true;
	}
	bool EXPORT_API getCdata(int* c)
	{
		for (int i = 0; i < gsubmesh.vertices.size(); i++)
		{
			c[i] = gsubmesh.cors[i];
		}
		return true;
	}
	int EXPORT_API getTcnt()
	{
		return gsubmesh.tris.size() * 3;
	}
	bool EXPORT_API getTdata(int* t)
	{
		int cnt = 0;
		for (int i = 0; i < gsubmesh.tris.size(); i++)
		{
			t[cnt++] = gsubmesh.tris[i].vertexIndex[0];
			t[cnt++] = gsubmesh.tris[i].vertexIndex[1];
			t[cnt++] = gsubmesh.tris[i].vertexIndex[2];
		}
		return true;
	}
	int EXPORT_API gettargetcnt()
	{
		return gtargets.size();
	}
	bool EXPORT_API getTargets(vec* p)
	{
		for (int i = 0; i < gtargets.size(); i++)
		{
			p[i] = gtargets[i] * EXPORT_SCALE;
		}
		return true;
	}
	void EXPORT_API converVecs2Bytes(vec* src, unsigned char* des, int sz)
	{
		memcpy_s(des, sz, src, sz);
	}
	void EXPORT_API converInts2Bytes(int* src, unsigned char* des, int sz)
	{
		memcpy_s(des, sz, src, sz);
	}
	void EXPORT_API converCors2Bytes(unsigned int* src, unsigned char* des, int sz)
	{
		memcpy_s(des, sz, src, sz);
	}
	void EXPORT_API setInt(int i)
	{
		g_int = i;
	}
	int EXPORT_API getInt()
	{
		return g_int;
	}
	void EXPORT_API setUInt(unsigned int i)
	{
		g_uint = i;
	}
	unsigned int EXPORT_API getUInt()
	{
		return g_uint;
	}
	void EXPORT_API setReal(real f)
	{
		g_real = f;
	}
	real EXPORT_API getReal()
	{
		return g_real;
	}
	void EXPORT_API setReal2(real f)
	{
		g_real2 = f;
	}
	real EXPORT_API getReal2()
	{
		return g_real2;
	}
	void EXPORT_API setVec(vec v)
	{
		g_vec = v;
	}
	vec EXPORT_API getVec()
	{
		return g_vec;
	}
	int EXPORT_API getdraglen()
	{
		return draglen;
	}
	int EXPORT_API getdragwid()
	{
		return dragwid;
	}
	int EXPORT_API getdraghgt()
	{
		return draghgt;
	}
	int EXPORT_API getclipA()
	{
		return clipA;
	}
	int EXPORT_API getclipB()
	{
		return clipB;
	}